bug#3964 and related issues: FTB problems with charsets where one byte can match many correct prefix compare with my_strnncoll

include/m_ctype.h:
  6th argument to my_strncoll to handle prefix comparison
myisam/ft_boolean_search.c:
  bug#3964 and related issues: problems with charsets where one byte can match many
  *correct* prefix compare with my_strnncoll
  *correct* backup of info->lastkey
mysql-test/r/fulltext.result:
  6th argument to my_strncoll to handle prefix comparison
mysql-test/t/fulltext.test:
  6th argument to my_strncoll to handle prefix comparison
mysys/my_handler.c:
  6th argument to my_strncoll to handle prefix comparison
sql/sql_parse.cc:
  cleanup
strings/ctype-big5.c:
  6th argument to my_strncoll to handle prefix comparison
strings/ctype-bin.c:
  6th argument to my_strncoll to handle prefix comparison
strings/ctype-czech.c:
  6th argument to my_strncoll to handle prefix comparison
strings/ctype-gbk.c:
  6th argument to my_strncoll to handle prefix comparison
strings/ctype-latin1.c:
  6th argument to my_strncoll to handle prefix comparison
strings/ctype-mb.c:
  6th argument to my_strncoll to handle prefix comparison
strings/ctype-simple.c:
  6th argument to my_strncoll to handle prefix comparison
strings/ctype-sjis.c:
  6th argument to my_strncoll to handle prefix comparison
strings/ctype-tis620.c:
  6th argument to my_strncoll to handle prefix comparison
strings/ctype-uca.c:
  6th argument to my_strncoll to handle prefix comparison
strings/ctype-ucs2.c:
  6th argument to my_strncoll to handle prefix comparison
strings/ctype-utf8.c:
  6th argument to my_strncoll to handle prefix comparison
strings/ctype-win1250ch.c:
  6th argument to my_strncoll to handle prefix comparison