strings/ctype-latin1.c
@@ -525,7 +525,8 @@ uchar combo2map[]={
 
 static int my_strnncoll_latin1_de(CHARSET_INFO *cs __attribute__((unused)),
 				  const uchar *a, uint a_length,
-				  const uchar *b, uint b_length)
+				  const uchar *b, uint b_length,
+                                  my_bool b_is_prefix)
 {
   const uchar *a_end= a + a_length;
   const uchar *b_end= b + b_length;
@@ -558,7 +559,7 @@ static int my_strnncoll_latin1_de(CHARSET_INFO *cs __attribute__((unused)),
     A simple test of string lengths won't work -- we test to see
     which string ran out first
   */
-  return ((a < a_end || a_extend) ? 1 :
+  return ((a < a_end || a_extend) ? (b_is_prefix ? 0 : 1) :
 	  (b < b_end || b_extend) ? -1 : 0);
 }
 
