strings/ctype-tis620.c
@@ -529,11 +529,15 @@ static uint thai2sortable(uchar *tstr, uint len)
 static
 int my_strnncoll_tis620(CHARSET_INFO *cs __attribute__((unused)),
                         const uchar * s1, uint len1, 
-                        const uchar * s2, uint len2)
+                        const uchar * s2, uint len2,
+                        my_bool s2_is_prefix)
 {
   uchar	buf[80] ;
   uchar *tc1, *tc2;
   int i;
+
+  if (s2_is_prefix && len1 > len2)
+    len1= len2;
 
   tc1= buf;
   if ((len1 + len2 +2) > (int) sizeof(buf))
